<resources>
    <string name="app_name">Управление вывозами</string>
    <string name="doneText">ДА</string>
    <string name="cannotDoneText">НЕТ</string>
    <string name="ifPointCanDone">Можно ли выполнить?</string>
    <string name="pointsAtAll">Точек</string>
    <string name="atAll">Всего</string>
    <string name="done">Выполнено</string>
    <string name="photos">Фото</string>
    <string name="vehicle">"Транспортное средство"</string>
    <string name="closeRoute">Закрыть маршрут</string>
    <string name="openClosePicture">Открыть/Закрыть</string>
    <string name="settings">Настройки</string>
    <string name="Home">Главная</string>
    <string name="list">Список</string>
    <string name="takePhotoBefore">Фото до</string>
    <string name="setCountFact">Установить факт</string>
    <string name="takePhotoAfter">Фото после</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addupdateroute">addUpdateRoute</string>
    <string name="URLName_Description">имя сервера для получения данных</string>
    <string name="UrlPort_Description">порт сервера для подключения</string>
    <string name="UrlAuthPass_Description">Пароль для подключения к серверу</string>
    <string name="connectionPref">Настройки подключения</string>
    <string name="commonPref">Общие настройки</string>
    <string name="routePref">Маршрут</string>
    <string name="routePref_Description">Выбранный маршрут</string>
    <string name="settingsLable">Настройки</string>
    <string name="serverAddress">Имя/адрес сервера</string>
    <string name="PortText">Порт</string>
    <string name="passText">Пароль</string>

    <string name="regionTitle">Регион</string>
    <string name="vehicleNumberTitle">ТС</string>
    <string name="datePrefTitle">Дата</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="point_name">point name</string>
    <string name="send_files">Отправить файлы</string>
    <string name="showRouteText">Построить маршрут</string>
    <string name="full_list">Показать полный список</string>
    <string name="onCall">По заявке</string>
    <string name="sendLog">Отправить лог</string>
    <string name="updateApp">Обновить приложение</string>
    <string name="update">Обновить</string>
    <string name="clearCache">Удалить кэш</string>
    <string name="servicePref">Сервисные функции</string>

    <string name="picture_cancel">ПОВТОР</string>
    <string name="picture_confirm">ОК</string>

    <string name="capture_button_alt">Фото</string>
    <string name="switch_camera_button_alt">Переключить камеру</string>
    <string name="gallery_button_alt">Галерия</string>
    <string name="back_button_alt">Назад</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Камера</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="routeTitle">Маршрут</string>
    <string name="searchTitle">Поиск</string>

</resources>