<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".ViewIssues.VehicleScreen.vehicle_screen"
    android:transitionName="vehicle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutRegion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/point_back"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textViewRegionTitle"
                android:labelFor="@id/AutoCompleteTextViewRegionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/regionTitle"
                android:textSize="25sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.076" />

            <AutoCompleteTextView
                android:id="@+id/AutoCompleteTextViewRegionName"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/textViewRegionTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewRegionTitle"
                app:layout_constraintTop_toTopOf="@+id/textViewRegionTitle" />

            <TextView
                android:id="@+id/textViewVehicleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/vehicleNumberTitle"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="@+id/textViewRegionTitle"
                app:layout_constraintTop_toBottomOf="@+id/AutoCompleteTextViewRegionName" />

            <AutoCompleteTextView
                android:id="@+id/AutoCompleteTextViewVehicle"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="@+id/textViewVehicleTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/AutoCompleteTextViewRegionName"
                app:layout_constraintTop_toTopOf="@+id/textViewVehicleTitle" />

            <TextView
                android:id="@+id/textViewRouteRefTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/routeTitle"
                android:textSize="25sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/textViewRegionTitle"
                app:layout_constraintTop_toBottomOf="@+id/AutoCompleteTextViewVehicle" />

            <AutoCompleteTextView
                android:id="@+id/AutoCompleteTextViewRouteRef"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/textViewRouteRefTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/AutoCompleteTextViewRegionName"
                app:layout_constraintTop_toTopOf="@+id/textViewRouteRefTitle" />

            <TextView
                android:id="@+id/textViewDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/datePrefTitle"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewRouteRefTitle"
                app:layout_constraintTop_toBottomOf="@+id/AutoCompleteTextViewRouteRef" />

            <TextView
                android:id="@+id/editTextDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewDateTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/AutoCompleteTextViewRegionName"
                app:layout_constraintTop_toTopOf="@+id/textViewDateTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutVehicle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/point_back"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutRegion">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/point_back"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutVehicle">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>